Created a Shape interface and implemented the interface for the curren t shapes.

--- a/src/figures/CMakeLists.txt
+++ b/src/figures/CMakeLists.txt
@@ -6,7 +6,10 @@ set(INPUT_SOURCES
 )
 
 set(INPUT_HEADERS
-
+   shape.h
+   triangle.h
+   circle.h
+   rectangle.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE ${INPUT_SOURCES} ${INPUT_HEADERS})
