Added prototype src to build.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(INPUT_SOURCES
 set(INPUT_HEADERS
 	Application.h
 	StringHelper.h
+	Prototype.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE ${INPUT_SOURCES} ${INPUT_HEADERS})
