Created a FileHelper class for read/write file operations and implemented save to file functionality.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,11 +1,13 @@
 set(INPUT_SOURCES
 	Application.cpp
+	FileHelper.cpp
 )
 
 set(INPUT_HEADERS
 	Application.h
 	StringHelper.h
 	Prototype.h
+	FileHelper.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE ${INPUT_SOURCES} ${INPUT_HEADERS})
