Made so every factory will use figure_factory interface. In this way logic for each factory is seporate.

--- a/src/figures/CMakeLists.txt
+++ b/src/figures/CMakeLists.txt
@@ -3,7 +3,8 @@ set(INPUT_SOURCES
    circle.cpp
    rectangle.cpp
    shape.cpp
-   FigureFactory.cpp
+   stdin_figure_factory.cpp
+   random_figure_factory.cpp
 )
 
 set(INPUT_HEADERS
@@ -11,8 +12,10 @@ set(INPUT_HEADERS
    triangle.h
    circle.h
    rectangle.h
-   FigureFactory.h
+   stdin_figure_factory.h
+   random_figure_factory.h
    figures.h
+   figure_factory.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE ${INPUT_SOURCES} ${INPUT_HEADERS})
